--- a/HTML/Gundo.html
+++ b/HTML/Gundo.html
@@ -30,6 +30,7 @@
             He went to school at LEAP Science and Maths School<br />
             He's currently studying Bcom Informatics taking Business studies as his elective because he's interested in the business world<br />
         </p>
+        <img class="BioImage" src="Images/antman-and-the-wasp-marvel-4.jpg" alt="ANT MAN"/>
 
     </div>
 
@@ -41,6 +42,7 @@
             Boitshoko plays soccer<br />
             He also enjoys playing video games<br />
         </p>
+        <img class="HobbyIMG" src="Images/Gaming.jpg" alt="Gaming"/>
     </div>
 
     <div class="Modules">
