--- a/HTML/Msizi.html
+++ b/HTML/Msizi.html
@@ -30,6 +30,7 @@
             He went to school at LEAP Science and Maths School<br />
             He's currently studying Bcom Informatics taking Business studies as his elective because he's interested in commerce more than statistics and accounting<br />
         </p>
+        <img class="BioImage" src="Images/The-Incredible-Hulk.jpg" alt="Hulk"/>
 
     </div>
 
@@ -41,6 +42,7 @@
             Msizi plays soccer<br />
             He also <br />
         </p>
+        <img class="HobbyIMG" src="Images/Dancing.jpeg" alt="Dancing"/>
     </div>
 
     <div class="Modules">
