--- a/HTML/Nhlanhla.html
+++ b/HTML/Nhlanhla.html
@@ -30,6 +30,7 @@
             He went to school at <br />
             He's currently studying Bcom Informatics taking Business Accounting as his elective because<br />
         </p>
+        <img class="BioImage" src="Images/Anthony-Mackie-Captain-America-4.jpg" alt="Captain America"/>
 
     </div>
 
@@ -41,6 +42,7 @@
             Boitshoko plays soccer<br />
             He also enjoys playing video games<br />
         </p>
+        <img class="HobbyIMG" src="Images/Reading.jpg" alt="Reading"/>
     </div>
 
     <div class="Modules">
