--- a/HTML/Boitshoko.html
+++ b/HTML/Boitshoko.html
@@ -30,6 +30,7 @@
             He went to school at LEAP Science and Maths School<br />
             He's currently studying Bcom Informatics taking Business studies as his elective because he's interested in the business world<br />
         </p>
+        <img class="BioImage" src="Images/tony-stark-iron-man.jpg" alt="Tony" />
 
     </div>
 
@@ -41,6 +42,7 @@
             Boitshoko plays soccer<br />
             He also enjoys playing video games<br />
         </p>
+        <img class="HobbyIMG" src="Images/Football.jpeg" alt="Football"/>
     </div>
 
     <div class="Modules">
