--- a/HTML/Ritshidze.html
+++ b/HTML/Ritshidze.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Boitshoko</title>
+    <title>Ritshidze</title>
     <link href="../Content/Mystyles.css" rel="stylesheet" />
 </head>
 <body>
 
-    <h1>Boitshoko Mphahlele</h1>
+    <h1>Ritshidze Nedzimauli</h1>
 
     <nav class="NavBar">
         <ul>
@@ -26,10 +26,11 @@
 
         <h3>Biography</h3>
         <p>
-            Boitshoko is from Limpopo at a town called Lebowakgomo<br />
+            Ritshidze is from Limpopo at a town called Thohoyandou<br />
             He went to school at LEAP Science and Maths School<br />
-            He's currently studying Bcom Informatics taking Business studies as his elective because he's interested in the business world<br />
+            He's currently studying Bcom Informatics taking Statistics as his elective because he's interested in data science<br />
         </p>
+        <img class="BioImage" src="Images/hawkeye.jpg" alt="Hawkeye" />
 
     </div>
 
@@ -38,10 +39,11 @@
         <h3>Hobbies</h3>
 
         <p>
-            Boitshoko plays soccer<br />
+            Ritshidze plays pool<br />
             He also enjoys playing video games<br />
         </p>
-        <img src="../HTML/Images/hawkeye.webp" alt="Alternate Text" />
+        <img class="HobbyIMG" src="Images/professional-pool-table.jpg" alt="Pool table" />
+
     </div>
 
     <div class="Modules">
