--- a/HTML/Boitshoko.html
+++ b/HTML/Boitshoko.html
@@ -25,12 +25,13 @@
     <div class="Biography">
 
         <h3>Biography</h3>
-        <p>
+        <p class="BIO">
             Boitshoko is from Limpopo at a town called Lebowakgomo<br />
             He went to school at LEAP Science and Maths School<br />
             He's currently studying Bcom Informatics taking Business studies as his elective because he's interested in the business world<br />
         </p>
         <img class="BioImage" src="Images/tony-stark-iron-man.jpg" alt="Tony" />
+
 
     </div>
 
@@ -38,11 +39,12 @@
 
         <h3>Hobbies</h3>
 
-        <p>
+        <p class="Hobby">
             Boitshoko plays soccer<br />
             He also enjoys playing video games<br />
+            <img class="HobbyIMG" src="Images/Football.jpeg" alt="Football" />
         </p>
-        <img class="HobbyIMG" src="Images/Football.jpeg" alt="Football"/>
+       
     </div>
 
     <div class="Modules">
