--- a/HTML/Gundo.html
+++ b/HTML/Gundo.html
@@ -25,10 +25,10 @@
     <div class="Biography">
 
         <h3>Biography</h3>
-        <p>
+        <p class="BIO">
             Gundo is from Limpopo at a town called Thohoyandou<br />
-            He went to school at LEAP Science and Maths School<br />
-            He's currently studying Bcom Informatics taking Business studies as his elective because he's interested in the business world<br />
+            He went to school at Tshikevha Christian School<br />
+            He's currently studying Bcom Informatics taking Business Accounting as his elective because he enjoys accounting<br />
         </p>
         <img class="BioImage" src="Images/antman-and-the-wasp-marvel-4.jpg" alt="ANT MAN"/>
 
@@ -39,10 +39,11 @@
         <h3>Hobbies</h3>
 
         <p>
-            Boitshoko plays soccer<br />
-            He also enjoys playing video games<br />
+            Gundo plays video games<br />
+            He also enjoys watching soccer matches<br />
+            <img class="HobbyIMG" src="Images/Gaming.jpg" alt="Gaming" />
         </p>
-        <img class="HobbyIMG" src="Images/Gaming.jpg" alt="Gaming"/>
+       
     </div>
 
     <div class="Modules">
