--- a/HTML/Msizi.html
+++ b/HTML/Msizi.html
@@ -25,9 +25,9 @@
     <div class="Biography">
 
         <h3>Biography</h3>
-        <p>
-            Msizi is from Kwa Zulu Natal at a town called Lebowakgomo<br />
-            He went to school at LEAP Science and Maths School<br />
+        <p class="BIO">
+            Msizi is from Kwa Zulu Natal at a town called Ejozini<br />
+            He went to school at Mandla Mthethwa School of Excellence<br />
             He's currently studying Bcom Informatics taking Business studies as his elective because he's interested in commerce more than statistics and accounting<br />
         </p>
         <img class="BioImage" src="Images/The-Incredible-Hulk.jpg" alt="Hulk"/>
@@ -40,9 +40,10 @@
 
         <p>
             Msizi plays soccer<br />
-            He also <br />
+            He also enjoys dancing <br />
+            <img class="HobbyIMG" src="Images/Dancing.jpeg" alt="Dancing" />
         </p>
-        <img class="HobbyIMG" src="Images/Dancing.jpeg" alt="Dancing"/>
+        
     </div>
 
     <div class="Modules">
