--- a/HTML/Nhlanhla.html
+++ b/HTML/Nhlanhla.html
@@ -25,7 +25,7 @@
     <div class="Biography">
 
         <h3>Biography</h3>
-        <p>
+        <p class="BIO">
             Nhlanhla is from  at a town called <br />
             He went to school at <br />
             He's currently studying Bcom Informatics taking Business Accounting as his elective because<br />
@@ -41,8 +41,9 @@
         <p>
             Boitshoko plays soccer<br />
             He also enjoys playing video games<br />
+            <img class="HobbyIMG" src="Images/Reading.jpg" alt="Reading" />
         </p>
-        <img class="HobbyIMG" src="Images/Reading.jpg" alt="Reading"/>
+        
     </div>
 
     <div class="Modules">
