--- a/HTML/Ritshidze.html
+++ b/HTML/Ritshidze.html
@@ -25,9 +25,9 @@
     <div class="Biography">
 
         <h3>Biography</h3>
-        <p>
+        <p class="BIO">
             Ritshidze is from Limpopo at a town called Thohoyandou<br />
-            He went to school at LEAP Science and Maths School<br />
+            He went to school at LwaMondo High School<br />
             He's currently studying Bcom Informatics taking Statistics as his elective because he's interested in data science<br />
         </p>
         <img class="BioImage" src="Images/hawkeye.jpg" alt="Hawkeye" />
@@ -41,8 +41,9 @@
         <p>
             Ritshidze plays pool<br />
             He also enjoys playing video games<br />
+            <img class="HobbyIMG" src="Images/professional-pool-table.jpg" alt="Pool table" />
         </p>
-        <img class="HobbyIMG" src="Images/professional-pool-table.jpg" alt="Pool table" />
+       
 
     </div>
 
