--- a/HTML/Nhlanhla.html
+++ b/HTML/Nhlanhla.html
@@ -26,9 +26,9 @@
 
         <h3>Biography</h3>
         <p class="BIO">
-            Nhlanhla is from  at a town called <br />
-            He went to school at <br />
-            He's currently studying Bcom Informatics taking Business Accounting as his elective because<br />
+            Nhlanhla is from Mpumalanga  at a town called Witbank <br />
+            He went to school at Reynopark High School<br />
+            He's currently studying Bcom Informatics taking Business Accounting as his elective because accounting has always been his passion <br />
         </p>
         <img class="BioImage" src="Images/Anthony-Mackie-Captain-America-4.jpg" alt="Captain America"/>
 
@@ -39,8 +39,8 @@
         <h3>Hobbies</h3>
 
         <p>
-            Boitshoko plays soccer<br />
-            He also enjoys playing video games<br />
+            Nhlanhla likes reading<br />
+            He also enjoys playing soccer and watching basketball<br />
             <img class="HobbyIMG" src="Images/Reading.jpg" alt="Reading" />
         </p>
         
